# cpp-oop-exam

Exam project/: Barbershop.cpp  Barbershop.h  CMakeLists.txt  Menu.cpp  Menu.h  Order.cpp  Order.h  Person.cpp  Person.h  Service.cpp  Service.h  Worker.cpp  Worker.h  main.cpp
